--- a/css/style.css
+++ b/css/style.css
@@ -495,6 +495,9 @@ body {
   color: #e4e6e5;
   padding-top: 90px;
 }
+#slide-5 p {
+  font-size: .5em;
+}
 
 @media(min-width: 480px) {
   #slide-5 p {
@@ -543,6 +546,7 @@ body {
 
 #slide-6 p {
   color: #fff;
+  font-size: .5em;
 }
 @media(min-width: 480px) {
   #slide-6 p {
